test/expected/regression-http-close.txt
/scripts/regression-http-close.js:20
        throw new Error('trace');
        ^

Error: trace
    at Server.close (/scripts/regression-http-close.js:r:c)
    at Object.onceWrapper (events.js:r:c)
    at Server.emit (events.js:r:c)
    at emitCloseNT (net.js:r:c)
    at process._tickCallback (internal/process/next_tick.js:r:c)
    at emitInitNative (internal/async_hooks.js:r:c)
    at emitInitScript (internal/async_hooks.js:r:c)
    at new TickObject (internal/process/next_tick.js:r:c)
    at internalNextTick (internal/process/next_tick.js:r:c)
    at Server._emitCloseIfDrained (net.js:r:c)
    at Server.close (net.js:r:c)
    at IncomingMessage.end (/scripts/regression-http-close.js:r:c)
    at Object.onceWrapper (events.js:r:c)
    at IncomingMessage.emit (events.js:r:c)
    at endReadableNT (_stream_readable.js:r:c)
    at process._tickCallback (internal/process/next_tick.js:r:c)
    at emitInitNative (internal/async_hooks.js:r:c)
    at emitInitScript (internal/async_hooks.js:r:c)
    at new TickObject (internal/process/next_tick.js:r:c)
    at process.nextTick (internal/process/next_tick.js:r:c)
    at endReadable (_stream_readable.js:r:c)
    at IncomingMessage.Readable.read (_stream_readable.js:r:c)
    at flow (_stream_readable.js:r:c)
    at resume_ (_stream_readable.js:r:c)
    at process._tickCallback (internal/process/next_tick.js:r:c)
    at emitInitNative (internal/async_hooks.js:r:c)
    at emitInitScript (internal/async_hooks.js:r:c)
    at new TickObject (internal/process/next_tick.js:r:c)
    at process.nextTick (internal/process/next_tick.js:r:c)
    at resume (_stream_readable.js:r:c)
    at IncomingMessage.Readable.resume (_stream_readable.js:r:c)
    at IncomingMessage.Readable.on (_stream_readable.js:r:c)
    at ClientRequest.get (/scripts/regression-http-close.js:r:c)
    at Object.onceWrapper (events.js:r:c)
    at ClientRequest.emit (events.js:r:c)
    at HTTPParser.parserOnIncomingClient (_http_client.js:r:c)
    at HTTPParser.parserOnHeadersComplete (_http_common.js:r:c)
    at Socket.socketOnData (_http_client.js:r:c)
    at Socket.emit (events.js:r:c)
    at addChunk (_stream_readable.js:r:c)
    at readableAddChunk (_stream_readable.js:r:c)
    at Socket.Readable.push (_stream_readable.js:r:c)
    at TCP.onread (net.js:r:c)
    at HTTPParser.emitInitNative (internal/async_hooks.js:r:c)
    at tickOnSocket (_http_client.js:r:c)
    at onSocketNT (_http_client.js:r:c)
    at process._tickCallback (internal/process/next_tick.js:r:c)
    at emitInitNative (internal/async_hooks.js:r:c)
    at emitInitScript (internal/async_hooks.js:r:c)
    at new TickObject (internal/process/next_tick.js:r:c)
    at process.nextTick (internal/process/next_tick.js:r:c)
    at ClientRequest.onSocket (_http_client.js:r:c)
    at handleSocketCreation_Inner (_http_agent.js:r:c)
    at oncreate (_http_agent.js:r:c)
    at Agent.createSocket (_http_agent.js:r:c)
    at Agent.addRequest (_http_agent.js:r:c)
    at new ClientRequest (_http_client.js:r:c)
    at request (http.js:r:c)
    at Object.get (http.js:r:c)
    at Server.listen (/scripts/regression-http-close.js:r:c)
    at Object.onceWrapper (events.js:r:c)
    at Server.emit (events.js:r:c)
    at emitListeningNT (net.js:r:c)
    at process._tickCallback (internal/process/next_tick.js:r:c)
    at emitInitNative (internal/async_hooks.js:r:c)
    at emitInitScript (internal/async_hooks.js:r:c)
    at new TickObject (internal/process/next_tick.js:r:c)
    at internalNextTick (internal/process/next_tick.js:r:c)
    at Server.setupListenHandle [as _listen2] (net.js:r:c)
    at TCP.emitInitNative (internal/async_hooks.js:r:c)
    at createServerHandle (net.js:r:c)
    at Server.setupListenHandle [as _listen2] (net.js:r:c)
    at listenInCluster (net.js:r:c)
    at GetAddrInfoReqWrap.doListen [as callback] (net.js:r:c)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:r:c)
    at GetAddrInfoReqWrap.emitInitNative (internal/async_hooks.js:r:c)
    at Object.lookup (dns.js:r:c)
    at lookupAndListen (net.js:r:c)
    at Server.listen (net.js:r:c)
    at Object.<anonymous> (/scripts/regression-http-close.js:r:c)
    at Module._compile (module.js:r:c)
    at Object.Module._extensions..js (module.js:r:c)
    at Module.load (module.js:r:c)
    at tryModuleLoad (module.js:r:c)
    at Function.Module._load (module.js:r:c)
    at Function.Module.runMain (module.js:r:c)
    at startup (bootstrap_node.js:r:c)
    at bootstrap_node.js:r:c
